samples/_failures_safe/1761541019_f0d494_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_289aef3d.c: In function ‘main’:
./samples/SAFE/__tmp_289aef3d.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_289aef3d.c:140:9: error: expected declaration or statement at end of input
